Fix menu toggle not being visible in iOS Safari

--- a/scss/components/_jwMenu.scss
+++ b/scss/components/_jwMenu.scss
@@ -107,6 +107,11 @@
     }
 }
 
+.platform-ios .jw-menu-popover.popover .scroll-content .scroll {
+    padding-bottom: 50px;
+
+}
+
 @include mobile-only () {
     .platform-android .jw-menu-popover.popover,
     .jw-menu-popover.popover {
